# hermes-overseer

./: .gitignore  CHANGELOG.md  DESIGN.md  HANDOFF.md  PLAN.md  RUNBOOK.md  pyproject.toml
cloud-init/: canary-watcher.sh  hermes-vps.yaml
config/: hermes-canonical.yaml  overseer.example.yaml
deploy/: xterm-ghostty.terminfo
deploy/hermes-hook/: HOOK.yaml  handler.py
deploy/hermes-plugin/: __init__.py  config.yaml.example  plugin.yaml  schemas.py  tools.py
distrobox/: overseer.ini  setup.sh
patches/: hermes-agent-write-through.patch
plans/: 001-state-preservation-and-local-backend.md  002-service-adapter-proxy.md  003-mailbox-protocol-plugin.md
scripts/: deploy.sh  kill-switch.sh  run_rebuild.py
specs/: hermes-session-db-monitor.md  notification-architecture.md
src/overseer/: __init__.py  __main__.py  config.py  ssh.py  tailscale.py  types.py
systemd/: hermes-overseer.service
tests/: conftest.py  test_config.py  test_ssh.py
tests/test_alert/: test_dispatch.py  test_email.py  test_telegram.py
tests/test_api/: test_server.py
tests/test_backup/: test_snapshot.py
tests/test_binarylane/: test_actions.py  test_client.py  test_queries.py
tests/test_bot/: test_commands.py  test_poller.py
tests/test_forensics/: test_session_db.py
tests/test_heartbeat/: test_canary.py  test_pulse.py
tests/test_monitor/: test_config_drift.py  test_connections.py  test_cost.py  test_files.py  test_metrics.py  test_pipeline.py  test_session_db.py
tests/test_provision/: test_builder.py  test_provisioner.py
tests/test_response/: test_actions.py  (+2 more)
(+33 files in other folders)
